fix: breakpoint for css on mobile

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -55,7 +55,7 @@ a {
   }
 }
 
-@media screen and (max-width: 400px){
+@media screen and (max-width: 600px){
   html {
     font-size: 14px;
   }
