--- a/app/components/Hero.module.css
+++ b/app/components/Hero.module.css
@@ -125,7 +125,7 @@
     height: 300px;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
     .hero {
         flex-direction: column;
         gap: 0.8rem;
